--- a/about.html
+++ b/about.html
@@ -442,7 +442,7 @@
                      <a href="about.html" aria-current="page">About Us</a></li>
                      <li
                             class="menu-item menu-item-type-post_type menu-item-object-page page_item page-item-740 menu-item-913">
-                            <a href="career.html" aria-current="page">Carrer</a>
+                            <a href="career.html" aria-current="page">Career</a>
                         </li>
                   <li id="menu-item-913" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-913">
                      <a href="contact.html">Contact</a></li>
@@ -473,7 +473,7 @@
                      <a href="about.html" aria-current="page">About Us</a></li>
                      <li
                      class="menu-item menu-item-type-post_type menu-item-object-page page_item page-item-732 menu-item-912">
-                     <a href="career.html" aria-current="page">Carrer</a></li>
+                     <a href="career.html" aria-current="page">Career</a></li>
                   <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-913"><a
                         href="contact.html">Contact</a></li>
                </ul>
@@ -528,7 +528,7 @@
                   <div class="right aos-init aos-animate" data-aos="fade-up">
                      <div class="img polygon_img">
                         <div class="poly_child"></div>
-                        <img class="" src="./assets/falcon-tap-the1.png" alt="">
+                        <img class="" src="./assets/vtd.jpg" alt="">
                      </div>
                   </div>
                </div>
@@ -542,7 +542,7 @@
                   <div class="left aos-init aos-animate" data-aos="fade-up">
                      <div class="img polygon_img">
                         <div class="poly_child"></div>
-                        <img class="" src="./assets/49567C2E-C2F2-4017-959F-18B52388CBB9.jpg" alt="">
+                        <img class="" src="./assets/vtd2.jpg" alt="">
                      </div>
                   </div>
                </div>
@@ -561,7 +561,8 @@
             </div>
          </div>
       </div>
-      <div class="about_vision bg__fill lazyloaded"
+
+      <!-- <div class="about_vision bg__fill lazyloaded"
          data-bg="./assets/office.jpg"
          style="background-image: url(./assets/office.jpg);">
          <div class="container">
@@ -584,225 +585,14 @@
                </div>
             </div>
          </div>
-      </div>
+      </div> -->
 
 
+      <div class="about_vision bg__fill"
+      data-bg="./assets/office.jpg" style="padding: 1px 0 !important;"></div>
 
 
-
-      <div class="about_environ bg__fill lazyloaded"
-         data-bg="./assets/calture.jpg"
-         style="background-image: url(./assets/calture.jpg);">
-         <div class="container">
-            <div class="row">
-               <div class="col-md-6">
-                  <div class="left">
-                     <h6 data-aos="fade-up" class="subtitle_frame aos-init aos-animate">
-                        CULTURE OF AMAZIC </h6>
-                     <article class="mb-5 aos-init aos-animate" data-aos="fade-up">
-                        <p>At Amazic, we consider the establishment of a joyous and productive work culture to be a fundamental component for sustainable growth. 
-                        The values we uphold include:</p>
-                     </article>
-                     <div class="box_text">
-                        <div class="item aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
-                           <p class="mb-0">LOVE AND SUPPORT EACH OTHER</p>
-                        </div>
-                        <div class="item aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
-                           <p class="mb-0">THINK DIFFERENT</p>
-                        </div>
-                        <div class="item aos-init aos-animate" data-aos="fade-up" data-aos-delay="300">
-                           <p class="mb-0">LESS IS MORE</p>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-
-               <div class="col-md-6">
-                  <div class="right aos-init aos-animate" data-aos="fade-up">
-
-                     <div class="img polygon_img" data-slick-index="0" aria-hidden="true"
-                        style="width: 820px; position: relative; left: 0px; top: 0px; z-index: 998; opacity: 0; transition: opacity 300ms ease 0s;"
-                        tabindex="-1">
-                        <div class="poly_child"></div>
-                        <img class="" src="./assets/271721722_308186184653001_8426020824722070129_n.jpeg" alt="">
-                     </div>
-                     <div class="img polygon_img" data-slick-index="1" aria-hidden="true"
-                        style="width: 820px; position: relative; left: -820px; top: 0px; z-index: 998; opacity: 0; transition: opacity 300ms ease 0s;"
-                        tabindex="-1">
-                        <div class="poly_child"></div>
-                        <img class="" src="./assets/271237130_308187634652856_1116406186289278444_n.jpeg" alt="">
-                     </div>
-                     <div class="img polygon_img" data-slick-index="2" aria-hidden="true"
-                        style="width: 820px; position: relative; left: -1640px; top: 0px; z-index: 998; opacity: 0; transition: opacity 300ms ease 0s;"
-                        tabindex="-1">
-                        <div class="poly_child"></div>
-                        <img class="" src="./assets/277737791_359728352832117_8198700448425909108_n.jpeg" alt="">
-                     </div>
-                     <div class="img polygon_img" data-slick-index="3" aria-hidden="true"
-                        style="width: 820px; position: relative; left: -2460px; top: 0px; z-index: 998; opacity: 0; transition: opacity 300ms ease 0s;"
-                        tabindex="-1">
-                        <div class="poly_child"></div>
-                        <img class="" src="./assets/267132907_290861253052161_5191281174885636861_n.jpeg" alt="">
-                     </div>
-                     <div class="img polygon_img" data-slick-index="4" aria-hidden="true"
-                        style="width: 820px; position: relative; left: -3280px; top: 0px; z-index: 998; opacity: 0; transition: opacity 300ms ease 0s;"
-                        tabindex="-1">
-                        <div class="poly_child"></div>
-                        <img class="" src="./assets/C7A8BDAA-BFEE-41A6-B4DD-A0D5B9310680.png" alt="">
-                     </div>
-                     <div class="img polygon_img" data-slick-index="5" aria-hidden="false"
-                        style="width: 820px; position: relative; left: -4100px; top: 0px; z-index: 999; opacity: 1;"
-                        tabindex="0">
-                        <div class="poly_child"></div>
-                        <img class="" src="./assets/7A3A73F5-DC13-4027-9C4E-97E30C6A2518.png" alt="">
-                     </div>
-                     <div class="img polygon_img" data-slick-index="6" aria-hidden="true"
-                        style="width: 820px; position: relative; left: -4920px; top: 0px; z-index: 998; opacity: 0;"
-                        tabindex="-1">
-                        <div class="poly_child"></div>
-                        <img class="" src="./assets/2-1-e1656660938450.jpg" alt="">
-                     </div>
-                     <div class="img polygon_img" data-slick-index="7" aria-hidden="true"
-                        style="width: 820px; position: relative; left: -5740px; top: 0px; z-index: 998; opacity: 0;"
-                        tabindex="-1">
-                        <div class="poly_child"></div>
-                        <img class="" src="./assets/35-2-scaled.jpg" alt="">
-                     </div>
-                     <div class="img polygon_img" data-slick-index="8" aria-hidden="true"
-                        style="width: 820px; position: relative; left: -6560px; top: 0px; z-index: 998; opacity: 0;"
-                        tabindex="-1">
-                        <div class="poly_child"></div>
-                        <img class="" src="./assets/27-1-scaled.jpg" alt="">
-                     </div>
-                     <div class="img polygon_img" data-slick-index="9" aria-hidden="true"
-                        style="width: 820px; position: relative; left: -7380px; top: 0px; z-index: 998; opacity: 0;"
-                        tabindex="-1">
-                        <div class="poly_child"></div>
-                        <img class="" src="./assets/271651320_308187447986208_101703898438644466_n.jpeg" alt="">
-                     </div>
-                     <div class="img polygon_img" data-slick-index="10" aria-hidden="true"
-                        style="width: 820px; position: relative; left: -8200px; top: 0px; z-index: 998; opacity: 0;"
-                        tabindex="-1">
-                        <div class="poly_child"></div>
-                        <img class="" src="./assets/07ACCC57-2660-4DF3-90AB-A72381C9CD16.png" alt="">
-                     </div>
-
-
-
-
-
-
-
-
-
-
-                  </div>
-               </div>
-
-
-            </div>
-
-            <div class="list_img_bot">
-
-
-               <div class="img" data-slick-index="-4" id="" aria-hidden="true" style="width: 395px;" tabindex="-1">
-                  <img class="" src="./assets/35-2-scaled.jpg" alt="">
-               </div>
-               <div class="img" data-slick-index="-3" id="" aria-hidden="true" style="width: 395px;" tabindex="-1">
-                  <img class="" src="./assets/27-1-scaled.jpg" alt="">
-               </div>
-               <div class="img" data-slick-index="-2" id="" aria-hidden="true" style="width: 395px;" tabindex="-1">
-                  <img class="" src="./assets/271651320_308187447986208_101703898438644466_n.jpeg" alt="">
-               </div>
-               <div class="img slick-slide" data-slick-index="-1" id="" aria-hidden="true" style="width: 395px;"
-                  tabindex="-1">
-                  <img class="" src="./assets/07ACCC57-2660-4DF3-90AB-A72381C9CD16.png" alt="">
-               </div>
-               <div class="img slick-slide" data-slick-index="0" aria-hidden="true" style="width: 395px;" tabindex="-1">
-                  <img class="" src="./assets/271721722_308186184653001_8426020824722070129_n.jpeg" alt="">
-               </div>
-               <div class="img slick-slide" data-slick-index="1" aria-hidden="true" style="width: 395px;" tabindex="-1">
-                  <img class="" src="./assets/271237130_308187634652856_1116406186289278444_n.jpeg" alt="">
-               </div>
-               <div class="img slick-slide" data-slick-index="2" aria-hidden="true" style="width: 395px;" tabindex="-1">
-                  <img class="" src="./assets/277737791_359728352832117_8198700448425909108_n.jpeg" alt="">
-               </div>
-               <div class="img slick-slide" data-slick-index="3" aria-hidden="true" style="width: 395px;" tabindex="-1">
-                  <img class="" src="./assets/267132907_290861253052161_5191281174885636861_n.jpeg" alt="">
-               </div>
-               <div class="img slick-slide" data-slick-index="4" aria-hidden="true" style="width: 395px;" tabindex="-1">
-                  <img class="" src="./assets/C7A8BDAA-BFEE-41A6-B4DD-A0D5B9310680.png" alt="">
-               </div>
-               <div class="img slick-slide" data-slick-index="5" aria-hidden="false" style="width: 395px;" tabindex="0">
-                  <img class="" src="./assets/7A3A73F5-DC13-4027-9C4E-97E30C6A2518.png" alt="">
-               </div>
-               <div class="img slick-slide" data-slick-index="6" aria-hidden="false" style="width: 395px;" tabindex="0">
-                  <img class="" src="./assets/2-1-e1656660938450.jpg" alt="">
-               </div>
-               <div class="img slick-slide" data-slick-index="7" aria-hidden="false" style="width: 395px;" tabindex="0">
-                  <img class="" src="./assets/35-2-scaled.jpg" alt="">
-               </div>
-               <div class="img slick-slide" data-slick-index="8" aria-hidden="false" style="width: 395px;" tabindex="0">
-                  <img class="" src="./assets/27-1-scaled.jpg" alt="">
-               </div>
-               <div class="img slick-slide" data-slick-index="9" aria-hidden="true" style="width: 395px;" tabindex="-1">
-                  <img class="" src="./assets/271651320_308187447986208_101703898438644466_n.jpeg" alt="">
-               </div>
-               <div class="img slick-slide" data-slick-index="10" aria-hidden="true" style="width: 395px;"
-                  tabindex="-1">
-                  <img class="" src="./assets/07ACCC57-2660-4DF3-90AB-A72381C9CD16.png" alt="">
-               </div>
-               <div class="img slick-slide" data-slick-index="11" id="" aria-hidden="true" style="width: 395px;"
-                  tabindex="-1">
-                  <img class="" src="./assets/271721722_308186184653001_8426020824722070129_n.jpeg" alt="">
-               </div>
-               <div class="img slick-slide" data-slick-index="12" id="" aria-hidden="true" style="width: 395px;"
-                  tabindex="-1">
-                  <img class="" src="./assets/271237130_308187634652856_1116406186289278444_n.jpeg" alt="">
-               </div>
-               <div class="img slick-slide" data-slick-index="13" id="" aria-hidden="true" style="width: 395px;"
-                  tabindex="-1">
-                  <img class="" src="./assets/277737791_359728352832117_8198700448425909108_n.jpeg" alt="">
-               </div>
-               <div class="img slick-slide" data-slick-index="14" id="" aria-hidden="true" style="width: 395px;"
-                  tabindex="-1">
-                  <img class="" src="./assets/267132907_290861253052161_5191281174885636861_n.jpeg" alt="">
-               </div>
-               <div class="img slick-slide" data-slick-index="15" id="" aria-hidden="true" style="width: 395px;"
-                  tabindex="-1">
-                  <img class="" src="./assets/C7A8BDAA-BFEE-41A6-B4DD-A0D5B9310680.png" alt="">
-               </div>
-               <div class="img slick-slide" data-slick-index="16" id="" aria-hidden="true" style="width: 395px;"
-                  tabindex="-1">
-                  <img class="" src="./assets/7A3A73F5-DC13-4027-9C4E-97E30C6A2518.png" alt="">
-               </div>
-               <div class="img slick-slide" data-slick-index="17" id="" aria-hidden="true" style="width: 395px;"
-                  tabindex="-1">
-                  <img class="" src="./assets/2-1-e1656660938450.jpg" alt="">
-               </div>
-               <div class="img slick-slide" data-slick-index="18" id="" aria-hidden="true" style="width: 395px;"
-                  tabindex="-1">
-                  <img class="" src="./assets/35-2-scaled.jpg" alt="">
-               </div>
-               <div class="img slick-slide" data-slick-index="19" id="" aria-hidden="true" style="width: 395px;"
-                  tabindex="-1">
-                  <img class="" src="./assets/27-1-scaled.jpg" alt="">
-               </div>
-               <div class="img slick-slide" data-slick-index="20" id="" aria-hidden="true" style="width: 395px;"
-                  tabindex="-1">
-                  <img class="" src="./assets/271651320_308187447986208_101703898438644466_n.jpeg" alt="">
-               </div>
-               <div class="img slick-slide" data-slick-index="21" id="" aria-hidden="true" style="width: 395px;"
-                  tabindex="-1">
-                  <img class="" src="./assets/07ACCC57-2660-4DF3-90AB-A72381C9CD16.png" alt="">
-               </div>
-
-
-
-
-            </div>
-         </div>
-      </div>
+      
 
 
 
@@ -838,7 +628,7 @@
                      <h5>Support</h5>
                      <ul class="list-unstyled">
                         <li>
-                           <a href="career.html">Carrer</a>
+                           <a href="career.html">Career</a>
                         </li>
                         <li>
                            <a href="contact.html">Contact</a>
