--- a/career.html
+++ b/career.html
@@ -617,7 +617,7 @@
                             <h5>Support</h5>
                             <ul class="list-unstyled">
                                <li>
-                                  <a href="career.html">Carrer</a>
+                                  <a href="career.html">Career</a>
                                </li>
                                <li>
                                   <a href="contact.html">Contact</a>
