--- a/contact.html
+++ b/contact.html
@@ -437,7 +437,7 @@
                                 href="about.html">About Us</a></li>
                                 <li id="menu-item-913"
                                 class="menu-item menu-item-type-post_type menu-item-object-page page_item page-item-740 menu-item-913">
-                                <a href="career.html" aria-current="page">Carrer</a>
+                                <a href="career.html" aria-current="page">Career</a>
                         <li id="menu-item-913"
                             class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-740 current_page_item menu-item-913">
                             <a href="contact.html" aria-current="page">Contact</a>
@@ -470,7 +470,7 @@
                                 href="about.html">About Us</a></li>
                         <li
                             class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-740 menu-item-913">
-                            <a href="career.html" aria-current="page">Carrer</a>
+                            <a href="career.html" aria-current="page">Career</a>
                         </li>
                         <li
                             class="menu-item menu-item-type-post_type menu-item-object-page page_item page-item-740 current_page_item menu-item-913">
@@ -629,7 +629,7 @@
                             <h5>Support</h5>
                             <ul class="list-unstyled">
                                <li>
-                                  <a href="career.html">Carrer</a>
+                                  <a href="career.html">Career</a>
                                </li>
                                <li>
                                   <a href="contact.html">Contact</a>
