--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
                   </li>
                   <li
                             class="menu-item menu-item-type-post_type menu-item-object-page page_item page-item-740 menu-item-913">
-                            <a href="career.html" aria-current="page">Carrer</a>
+                            <a href="career.html" aria-current="page">Career</a>
                         </li>
                   <li id="menu-item-913" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-913">
                      <a href="contact.html">Contact</a>
@@ -473,7 +473,7 @@
                   <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-913"><a
                         href="contact.html">Contact</a></li>
                         <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-913"><a
-                           href="career.html">Carrer</a></li>
+                           href="career.html">Career</a></li>
                </ul>
             </div>
 
@@ -790,7 +790,7 @@
                      <h5>Support</h5>
                      <ul class="list-unstyled">
                         <li>
-                           <a href="career.html">Carrer</a>
+                           <a href="career.html">Career</a>
                         </li>
                         <li>
                            <a href="contact.html">Contact</a>
