--- a/contact.html
+++ b/contact.html
@@ -422,7 +422,7 @@
                 <div class="left">
                     <div class="logo">
                         <a href="index.html">
-                            <img class="" src="./assets/logo.png" alt="">
+                            <img class="" src="./assets/logo.webp" alt="">
                         </a>
                     </div>
                 </div>
@@ -485,7 +485,7 @@
     <link rel="stylesheet" href="./assets/contact.css">
     <div id="Contact">
         <div class="contactBanner">
-            <img class="" src="./assets/party.jpg" alt="">
+            <img class="" src="./assets/party.webp" alt="">
         </div>
         <div class="contactForm">
             <div class="container">
@@ -493,7 +493,7 @@
                     <div class="row">
                         <div class="col-lg-6 col-md-7">
                             <div class="--left aos-init aos-animate" data-aos="fade-up">
-                                <div class="--img"><img class="" src="./assets/Frame-5205.png" alt=""></div>
+                                <div class="--img"><img class="" src="./assets/Frame-5205.webp" alt=""></div>
                                 <div class="--txt">
                                     <div class="segTitle">
                                         <h3>AMAZIC</h3>
@@ -532,7 +532,7 @@
                                     </div>
                                 </div>
                                 <div class="partent">
-                                    <img class="" style="opacity: 0.03;width: 100%;" src="./assets/logo.png" alt="">
+                                    <img class="" style="opacity: 0.03;width: 100%;" src="./assets/logo.webp" alt="">
                                 </div>
                             </div>
                         </div>
@@ -600,7 +600,7 @@
         
     </div>
 
-    <div class="about_vision bg__fill" data-bg="./assets/office.jpg" style="padding: 1px 0 !important;background: #0a1c2d;"></div>
+    <div class="about_vision bg__fill" data-bg="./assets/office.webp" style="padding: 1px 0 !important;background: #0a1c2d;"></div>
 
     <div class="footer">
         <div class="container">
@@ -609,8 +609,8 @@
                     <div class="footer_left">
                         <div class="logo">
                             <img class=" ls-is-cached lazyloaded"
-                                data-src="./assets/logo.png" alt=""
-                                src="./assets/logo.png">
+                                data-src="./assets/logo.webp" alt=""
+                                src="./assets/logo.webp">
                         </div>
                         <span style="color: white;">Connect Innovation Through <br>Mobile Solutions</span>
                     </div>
