--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
             <div class="left">
                <div class="logo">
                   <a href="#">
-                     <img class="" src="./assets/logo.png" alt="">
+                     <img class="" src="./assets/logo.webp" alt="">
                   </a>
                   
                </div>
@@ -502,13 +502,13 @@
                         </div>
                      </div>
                      <div class="patttern aos-init aos-animate" data-aos="fade-up">
-                        <img class="" src="./assets/logo.png" alt="">
+                        <img class="" src="./assets/logo.webp" alt="">
                      </div>
                   </div>
                </div>
                <div class="col-md-6 p-0">
                   <div class="right">
-                     <img data-aos="zoom-in" class="aos-init aos-animate" src="./assets/banner-website_01.jpg" alt="">
+                     <img data-aos="zoom-in" class="aos-init aos-animate" src="./assets/banner-website_01.webp" alt="">
                   </div>
                </div>
             </div>
@@ -530,7 +530,7 @@
                      <div class="left">
                         <div class="info_game d-flex">
                            <div class="icon mr-3">
-                              <img class="" src="./assets/ar-logo.jpg" alt="">
+                              <img class="" src="./assets/ar-logo.webp" alt="">
                            </div>
                            <div class="option">
                               <h5>AR Drawing</h5>
@@ -550,7 +550,7 @@
                      </div>
                      <div class="right">
                         <div class="img-wrapper">
-                           <img class="" src="./assets/ar.jpg" alt="">
+                           <img class="" src="./assets/ar.webp" alt="">
                         </div>
                      </div>
                      <div class="border-poly"></div>
@@ -563,7 +563,7 @@
                      <div class="left">
                         <div class="info_game d-flex">
                            <div class="icon mr-3">
-                              <img class="" src="./assets/spin-logo.jpg" alt="">
+                              <img class="" src="./assets/spin-logo.webp" alt="">
                            </div>
                            <div class="option">
                               <h5>Spin Wheel</h5>
@@ -583,7 +583,7 @@
                      </div>
                      <div class="right">
                         <div class="img-wrapper">
-                           <img class="" src="./assets/spin.jpg" alt="">
+                           <img class="" src="./assets/spin.webp" alt="">
                         </div>
                      </div>
                      <div class="border-poly"></div>
@@ -596,7 +596,7 @@
                      <div class="left">
                         <div class="info_game d-flex">
                            <div class="icon mr-3">
-                              <img class="" src="./assets/emoji-logo.jpg" alt="">
+                              <img class="" src="./assets/emoji-logo.webp" alt="">
                            </div>
                            <div class="option">
                               <h5>Emoji Maker</h5>
@@ -616,7 +616,7 @@
                      </div>
                      <div class="right">
                         <div class="img-wrapper">
-                           <img class="" src="./assets/emoji.jpg" alt="">
+                           <img class="" src="./assets/emoji.webp" alt="">
                         </div>
                      </div>
                      <div class="border-poly"></div>
@@ -629,7 +629,7 @@
                      <div class="left">
                         <div class="info_game d-flex">
                            <div class="icon mr-3">
-                              <img class="" src="./assets/gps-logo.jpg" alt="">
+                              <img class="" src="./assets/gps-logo.webp" alt="">
                            </div>
                            <div class="option">
                               <h5>GPS Phone Tracker</h5>
@@ -649,7 +649,7 @@
                      </div>
                      <div class="right">
                         <div class="img-wrapper">
-                           <img class="" src="./assets/gps.jpg" alt="">
+                           <img class="" src="./assets/gps.webp" alt="">
                         </div>
                      </div>
                      <div class="border-poly"></div>
@@ -688,7 +688,7 @@
                </div>
                <div class="col-md-6">
                   <div class="right_img">
-                     <img class="" src="./assets/2006.w013.n001.219B.p30.219-Converted-1.jpg" alt="">
+                     <img class="" src="./assets/2006.w013.n001.219B.p30.219-Converted-1.webp" alt="">
                   </div>
                </div>
             </div>
@@ -711,36 +711,36 @@
 
             <div class="item slick-slide" data-slick-index="-8" id="" aria-hidden="true" style="width: 240px;"
                tabindex="-1">
-               <img class="" src="./Assets/pangle.png" alt="">
+               <img class="" src="./Assets/pangle.webp" alt="">
             </div>
             <div class="item slick-slide" data-slick-index="-2" id="" aria-hidden="true" style="width: 240px;"
                tabindex="-1">
-               <img class="" src="./Assets/tiktok.png" alt="">
+               <img class="" src="./Assets/tiktok.webp" alt="">
             </div>
             <div class="item slick-slide" data-slick-index="-1" id="" aria-hidden="true" style="width: 240px;"
                tabindex="-1">
-               <img class="" src="./Assets/unity.png" alt="">
+               <img class="" src="./Assets/unity.webp" alt="">
             </div>
             <div class="item slick-slide" data-slick-index="0" aria-hidden="true" style="width: 240px;" tabindex="-1">
-               <img class="" src="./Assets/vungle.png" alt="">
+               <img class="" src="./Assets/vungle.webp" alt="">
             </div>
             <div class="item slick-slide" data-slick-index="4" aria-hidden="true" style="width: 240px;" tabindex="-1">
-               <img class="" src="./Assets/applovin.png" alt="">
+               <img class="" src="./Assets/applovin.webp" alt="">
             </div>
             <div class="item slick-slide" data-slick-index="7" aria-hidden="true" style="width: 240px;" tabindex="-1">
-               <img class="" src="./Assets/ggadmob.png" alt="">
+               <img class="" src="./Assets/ggadmob.webp" alt="">
             </div>
             <div class="item slick-slide" data-slick-index="8" aria-hidden="true" style="width: 240px;" tabindex="-1">
-               <img class="" src="./Assets/ggads.png" alt="">
+               <img class="" src="./Assets/ggads.webp" alt="">
             </div>
             <div class="item slick-slide" data-slick-index="10" aria-hidden="true" style="width: 240px;" tabindex="-1">
-               <img class="" src="./Assets/ironsource.png" alt="">
+               <img class="" src="./Assets/ironsource.webp" alt="">
             </div>
             <div class="item slick-slide" data-slick-index="11" aria-hidden="true" style="width: 240px;" tabindex="-1">
-               <img class="" src="./Assets/meta-1.png" alt="">
+               <img class="" src="./Assets/meta-1.webp" alt="">
             </div>
             <div class="item slick-slide" data-slick-index="12" aria-hidden="true" style="width: 240px;" tabindex="-1">
-               <img class="" src="./Assets/mintegral.png" alt="">
+               <img class="" src="./Assets/mintegral.webp" alt="">
             </div>
             <button class="slick-next slick-arrow" aria-label="Next" type="button"
                style="display: inline-block;">Next</button>
@@ -749,7 +749,7 @@
    
       </div>
    </div>
-   <div class="about_vision bg__fill" data-bg="./assets/office.jpg" style="padding: 1px 0 !important;background: #0a1c2d;"></div>
+   <div class="about_vision bg__fill" data-bg="./assets/office.webp" style="padding: 1px 0 !important;background: #0a1c2d;"></div>
    <div class="footer">
       <div class="container">
          <div class="row">
@@ -757,8 +757,8 @@
                <div class="footer_left">
                   <div class="logo">
                      <img class=" ls-is-cached lazyloaded"
-                        data-src="./Assets/logo.png" alt=""
-                        src="./Assets/logo.png">
+                        data-src="./Assets/logo.webp" alt=""
+                        src="./Assets/logo.webp">
                   </div>
                   <span style="color: white;">Connect Innovation Through <br>Mobile Solutions</span>
                </div>
